--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-openai==1.3.0
-httpx==0.25.0
-python-dotenv==1.0.0
-requests==2.31.0
-chromadb==0.4.15
-langchain==0.0.350requests
+cat > requirements.txt << 'EOF'
+fastapi
+uvicorn
+langchain==0.0.350
+requests
+chromadb
+openai
+python-dotenv
+PyPDF2
+python-multipart
+EOF
