Fix requirements.txt - remove shell commands

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 fastapi
 uvicorn
-langchain==0.0.350
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-core==0.1.52
 requests
 chromadb
 openai
